[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/characters/base_npc/shadow/invise_range/invis.gd" type="Script" id=1]


[sub_resource type="CircleShape2D" id=1]
radius = 73.2462

[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="delay" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="delay" to="." method="_on_delay_timeout"]
